--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "seedingredient": "node ./bin/seed.ingredient.js",
     "seedproduct": "node ./bin/seed.product.js",
     "seedcomment": "node ./bin/seed.comment.js",
-    "seedcart": "node ./bin/seed.cart.js"
+    "seedcart": "node ./bin/seed.cart.js",
+    "seedall": "node ./bin/seed.user.js ./bin/seed.ingredient.js ./bin/seed.product.js ./bin/seed.comment.js ./bin/seed.cart.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
